# three-layer

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  ChangeLog.md  Dockerfile  LICENSE  Makefile  README.md  Setup.hs  circle.yml  config.toml  package.yaml  stack.yaml  testFile.hs  three-layer.cabal
.circleci/: circle.yml  config.yml
app/: Main.hs
elm/: .gitignore  elm-package.json  package.json  webpack.config.js
elm/src/elm/: Foo.elm  Main.elm
elm/src/static/: index.html  index.js
fix-point/: .gitignore  ChangeLog.md  README.md  Refactor.hs  fix-point.cabal  stack.yaml
fix-point/app/: Main.hs
fix-point/src/: CopyFiles.hs  Prelude.hs  Refactor.hs  Rename.hs
flutter_proto_test/: README.md  pubspec.yaml
flutter_proto_test/android/app/: build.gradle
flutter_proto_test/android/app/src/main/: AndroidManifest.xml
flutter_proto_test/android/app/src/main/java/com/example/prototest/: MainActivity.java
flutter_proto_test/ios/Runner/: Info.plist
flutter_proto_test/ios/Runner.xcodeproj/: project.pbxproj
flutter_proto_test/lib/: foo.pb.dart  foo.pbenum.dart  foo.pbjson.dart  foo.pbserver.dart  main.dart
flutter_proto_test/test/: widget_test.dart
frontend/: elm.json  elmapp.config.js
frontend/elm-stuff/0.19.0/: Api.elmi  Api.elmo  Core-Decoder.elmi  Core-Decoder.elmo  Core-ElmStreet.elmi  Core-ElmStreet.elmo  Core-Encoder.elmi  Core-Encoder.elmo  Core-Types.elmi  Core-Types.elmo  Lib-Core-Decoder.elmi  Lib-Core-Decoder.elmo  Lib-Core-ElmStreet.elmo  Lib-Core-Encoder.elmi  Lib-Core-Encoder.elmo  Lib-Core-Types.elmi  Lib-Core-Types.elmo  Main.elmo
frontend/public/: index.html  manifest.json
frontend/src/: Api.elm  Main.elm  main.css
frontend/src/Lib/Core/: Decoder.elm  ElmStreet.elm  Encoder.elm  Types.elm
generate-elm/: Main.hs
proto/: common.proto  foo.proto  login.proto
sql/: schema.sql  seed.sql
src/: Lib.hs  MoveUtil.hs  Prelude.hs
src/Lib/: App.hs  Config.hs  Db.hs  Server.hs  Time.hs
src/Lib/App/: Env.hs  Error.hs  Monad.hs
src/Lib/Core/: Admin.hs  Email.hs  Id.hs  Jwt.hs  Password.hs  Session.hs  User.hs
src/Lib/Db/: Functions.hs  Schema.hs  User.hs
src/Lib/Effects/: Jwt.hs  Log.hs  Measure.hs  Session.hs  User.hs
src/Lib/Server/: Auth.hs  Search.hs  Types.hs
src/Lib/Util/: App.hs  JWT.hs  Password.hs
test/: AuthSpec.hs  JWTSpec.hs  Spec.hs
test/Test/: Assert.hs  Auth.hs  AuthSpec.hs  Common.hs  JWTSpec.hs  JwtSpec.hs  Password.hs
test/Test/Core/: Jwt.hs  Password.hs
