name:           fix-point
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/fix-point#readme>
homepage:       https://github.com/githubuser/fix-point#readme
bug-reports:    https://github.com/githubuser/fix-point/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/fix-point

library
  exposed-modules:
      CopyFiles
      Rename
  other-modules:
      Paths_fix_point
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , directory
    , filepath
    , text
  ghc-options:
     -Wall
  default-language: Haskell2010
  default-extensions: OverloadedStrings


executable fix-point-exe
  main-is: Main.hs
  other-modules:
      Paths_fix_point
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , directory  
    , fix-point
  default-language: Haskell2010

test-suite fix-point-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_fix_point
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , fix-point
  default-language: Haskell2010
