cabal-version:       2.0
name:                fix-point
version:             0.0.0
description:         Please see the README on GitHub
homepage:            https://github.com/holmusk/three-layer
bug-reports:         https://github.com/holmusk/three-layer/issues
author:              Tejas Chandrasekar
maintainer:          Holmusk <tech@holmusk.com>
copyright:           2018-2019 Holmusk
license:             BSD3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md
tested-with:         GHC == 8.6.5

source-repository head
  type: git
  location: https://github.com/Holmusk/three-layer

library
  hs-source-dirs: src
  exposed-modules:
      Prelude
      CopyFiles
      Rename
  other-modules: Paths_fix_point
  build-depends:
      base-noprelude >=4.11 && <5
    , directory
    , filepath
    , relude ^>= 0.5.0
    , text
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable fix-point
  main-is: Main.hs
  other-modules:
      Paths_fix_point
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base-noprelude
    , directory
    , fix-point
    , optparse-applicative
    , relude
  default-language: Haskell2010

test-suite fix-point-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_fix_point
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base-noprelude
    , fix-point
  default-language: Haskell2010
